2004-10-19  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    Report loudly (into log), when DNS lookups take more
	    than 30 seconds.

	* smtpserver/subdaemons.c:
	    There must be at least dummy pointer init for rate-tracker,
	    too..

	* include/shmmib.h, scheduler/mailq.inc:
	    Added couple subserver task queue tracker variables,
	    and their printouts.  These are debug stuff, but still..

	* smtpserver/smtpserver.c:
	    Note pipeline input along with lack of EHLO greeting!

	* smtpserver/smtpcmds.c:
	    Demand user to authenticate for SUBMISSION/MSA mode
	    MAIL/RCPT commands.

	* smtpserver/smtpserver.h, smtpserver/subdaemon-ctf.c,
	  smtpserver/subdaemon-rtr.c, smtpserver/subdaemons.c:
	    - Subdaemon ran sub-servers have idle-apoptosis
	    - Arrived jobs are queued in strict order of arrival,
	      and they can become revoked from the queue if the
	      client has disconnected before the job goes into
	      processing.

2004-10-07  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemon-ctf.c:
	    Match interactive content-filter call interface with
	    documented behaviour (and what the router does).

	* smtpserver/subdaemons.c, smtpserver/subdaemon-rtr.c:
	    Reworked (more carefully) of how the round-robin job
	    queueing should work.  Now there is perhaps a bit of
	    fairness in job processing.

	* man/smtpserver.8.in:
	    Document (in man-page) about the 'msgratelimit nn,mm'
	    syntax parameter.

	* smtpserver/subdaemons.c, smtpserver/smtpserver.h:
	    When having received a job from a peer, mark it in
	    a separate flag, and use that flag then to talk with
	    the processing subprograms.  Also switched back to
	    "serve first the lowest number peer fd" system.

2004-09-27  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c, smtpserver/smtpserver.h,
	  smtpserver/subdaemon-trk.c:
	    A bit more of rate-limitter updates to complete things.