@@ -123,6 +123,14 @@ main(argc, argv)
 	  SIGNAL_HANDLE(SIGQUIT, wantout);
 	SIGNAL_IGNORE(SIGPIPE);
 
+
+	/* This assignment MUST precede readzenv() ! */
+	progname = strrchr(argv[0], '/');
+	if (progname == NULL)
+	  progname = argv[0];
+	else
+	  ++progname;
+
 	if (getenv("ZCONFIG")) readzenv(getenv("ZCONFIG"));
 
 
@@ -133,11 +141,6 @@ main(argc, argv)
 
 	atexit(MIBcountCleanup);
 
-
-	if ((progname = strrchr(argv[0], '/')) == NULL)
-	  progname = argv[0];
-	else
-	  ++progname;
 	errflg = 0;
 	channel = CHANNEL;
 	while (1) {
