@@ -1,3 +1,11 @@
+2004-10-20  Matti Aarnio  <mea@zmailer.org>
+
+	* transports/errormail/errormail.c, transports/expirer/expirer.c,
+	  transports/hold/hold.c, transports/mailbox/mailbox.c,
+	  transports/reroute/reroute.c, transports/sm/sm.c,
+	  transports/smtp/smtp.c, utils/vacation/vacation.c:
+	    Assign 'progname' ALWAYS before  readzenv() call !
+
 2004-10-19  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/policytest.c:
